<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mys_ya.feature_profile.ui.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/leaf_light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/label_fragment_text_vew"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_profile" />

            <ImageView
                android:id="@+id/button_profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="4dp"
                android:importantForAccessibility="no"
                android:padding="@dimen/default_padding_toolbar_action_button"
                android:src="@drawable/ic_edit" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/profile_info_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                tools:src="@drawable/temp_image_man" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_space_default" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black_87"
                android:textSize="@dimen/text_size_profile_name"
                tools:text="Константинов Денис" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_space_default" />

            <TextView
                style="@style/profile_title_item_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:text="@string/date_of_birth_title" />

            <TextView
                android:id="@+id/profile_birthday"
                style="@style/TextStyle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                tools:text="01 февраля 1980" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                style="@style/profile_title_item_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:text="@string/working_title" />

            <TextView
                android:id="@+id/profile_working"
                style="@style/TextStyle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                tools:text="Хирургия, травмотология" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_space_default" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/push_notifications"
                style="@style/TextStyle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:text="@string/push_notifications"
                app:thumbTint="@color/leaf"
                app:trackTint="@drawable/color_switch_selector" />

            <View
                android:id="@+id/divider_after_info_block"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_info_block" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                style="@style/profile_title_item_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:text="@string/list_friends_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_space_default" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_friend_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="false"
                tools:itemCount="3"
                tools:listitem="@layout/item_friends" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <View
                android:id="@+id/divider_after_list_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@color/cool_grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="38dp"
                android:backgroundTint="@color/leaf_light"
                android:elevation="2dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/logout_button_text"
                android:textAllCaps="false"
                android:translationZ="2dp"
                app:cornerRadius="@dimen/corner_radius_logout_button" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>